unify packing and test logic for java